--- a/src/css/resize.css
+++ b/src/css/resize.css
@@ -128,3 +128,80 @@
 .resize-bottom-right::after {
   width: 16px;
 }
+
+/**** point ****/
+
+.point-bottom,
+.point-right {
+  display: flex;
+
+  position: absolute;
+
+  width: var(--resizer-size);
+  height: var(--resizer-size);
+}
+
+.point-bottom::after,
+.point-right::after,
+.point-bottom-right::after {
+  content: '';
+
+  display: block;
+  width: 5px;
+  height: 5px;
+
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(85, 85, 85);
+
+  box-sizing: border-box;
+}
+
+.point-bottom {
+  align-items: flex-start;
+  justify-content: center;
+  
+  top: 100%;
+  left: calc(50% - var(--resizer-size) / 2);
+}
+.point-bottom:hover {
+  cursor: ns-resize;
+}
+
+.point-right {
+  align-items: center;
+  justify-content: flex-start;
+  
+  top: calc(50% - var(--resizer-size) / 2);
+  left: 100%;
+}
+.point-right:hover {
+  cursor: ew-resize;
+}
+
+.point-bottom-right {
+  position: absolute;
+  top: 100%;
+  left: calc(100% - 20px);
+
+  width: 20px;
+  height: 20px;
+}
+.point-bottom-right:hover {
+  cursor: se-resize;
+}
+.point-bottom-right::after {
+  position: absolute;
+  top: 0;
+  left: 20px;
+}
+.point-bottom-right::before {
+  content: '';
+
+  position: absolute;
+  left: 100%;
+  bottom: 0;
+  
+  display: block;
+  width: 20px;
+  height: 40px;
+}
