--- a/src/components/BigButton/BigButton.module.css
+++ b/src/components/BigButton/BigButton.module.css
@@ -20,7 +20,19 @@
 }
 .button:active {
   background-color: var(--selected-dark);
-  border: 1px solid var(--selected-dark-line);
+  border-color: var(--selected-dark-line);
+}
+.button--active {
+  background-color: rgb(201, 224, 247);
+  border-color: rgb(98, 162, 228);
+}
+.button--active:hover {
+  background-color: rgb(213, 230, 247);
+  border-color: rgb(122, 176, 231);
+}
+.button--active:active {
+  background-color: rgb(201, 224, 247);
+  border-color: rgb(98, 162, 228);
 }
 .button--small {
   padding-top: calc(4px + (var(--ribbon-icon-size) - var(--ribbon-icon-small-size)) / 2);
