further work on stuff related to colors

--- a/src/components/ColorsWindow/ColorsWindow.module.css
+++ b/src/components/ColorsWindow/ColorsWindow.module.css
@@ -28,6 +28,11 @@
 
   margin-top: 6px;
 }
+.grid--alt {
+  grid-auto-flow: column;
+  grid-template-rows: repeat(2, auto);
+  grid-template-columns: auto;
+}
 
 .grid-button {
   position: relative;
