further work on brushes

--- a/src/components/BigButtonDuo/BigButtonDuo.module.css
+++ b/src/components/BigButtonDuo/BigButtonDuo.module.css
@@ -32,6 +32,17 @@
 .container:hover .top:active {
   border-color: var(--selected-dark-line);
 }
+.container--active .top {
+  background-color: rgb(201, 224, 247);
+  border-color: rgb(98, 162, 228);
+}
+.container--active:hover .top {
+  border-color: rgb(98, 162, 228);
+  background-color: rgb(213, 230, 247);
+}
+.container--active .top:active {
+  background-color: rgb(201, 224, 247);
+}
 
 .image {
   display: block;
@@ -57,6 +68,17 @@
 }
 .container:hover .bottom:active {
   border-color: var(--selected-dark-line);
+}
+.container--active .bottom {
+  background-color: rgb(201, 224, 247);
+  border-color: rgb(98, 162, 228);
+}
+.container--active:hover .bottom {
+  border-color: rgb(98, 162, 228);
+  background-color: rgb(213, 230, 247);
+}
+.container--active .bottom:active {
+  background-color: rgb(201, 224, 247);
 }
 
 .triangle {
