--- a/src/components/RibbonBrushes/RibbonBrushes.module.css
+++ b/src/components/RibbonBrushes/RibbonBrushes.module.css
@@ -13,6 +13,17 @@
   background-color: rgb(240, 245, 250);
   border-color: rgb(170, 210, 255);
 }
+.button.button--active {
+  background-color: rgb(206, 229, 252);
+  border-color: rgb(100, 165, 230);
+}
+.button.button--active:hover {
+  background-color: rgb(219, 235, 252);
+  border-color: rgb(125, 179, 234);
+}
+.button:active img {
+  opacity: 0.5;
+}
 
 .button img {
   display: block;
