--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -11,3 +11,41 @@
   background-color: white;
   box-shadow: 5px 5px 2px rgba(100, 100, 100, 0.2);
 }
+.canvas--draw {
+  cursor: url(./assets/draw.png) 9 9, default;
+}
+.canvas--pencil {
+  cursor: url(./assets/pencil.png) 1 14, default;
+}
+.canvas--fill {
+  cursor: url(./assets/fill.png) 1 12, default;
+}
+.canvas--color-picker {
+  cursor: url(./assets/picker.png) 0 14, default;
+}
+.canvas--select {
+  cursor: url(./assets/select.png) 10 10, default;
+}
+.canvas--airbrush {
+  cursor: url(./assets/spray.png) 0 12, default;
+}
+.canvas--text {
+  cursor: url(./assets/text.png) 3 9, default;
+}
+.canvas--zoom {
+  cursor: url(./assets/zoom.png) 5 5, default;
+}
+.canvas--none {
+  cursor: none;
+}
+
+.eraser {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+
+  border: 1px solid rgb(0, 0, 0);
+
+  box-sizing: border-box;
+  pointer-events: none;
+}
