--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -42,6 +42,18 @@
   cursor: none;
 }
 
+.eraser-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  width: 100%;
+  height: 100%;
+
+  pointer-events: none;
+  overflow: hidden;
+}
+
 .eraser {
   position: absolute;
   top: 5px;
