--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -11,7 +11,7 @@
   background-color: rgb(255, 0, 255);
   box-shadow: 5px 5px 2px rgba(100, 100, 100, 0.2);
 }
-.canvas--tertiary {
+.canvas--selection {
   border: 1px dashed black;
 }
 .canvas--cursor-draw {
