- changed doSetSize and doSetPosition to doSelectionSet... - a bit of logic used for number input validation form ColorPicker is moved to utils.js and also used by ResizeWindow - work on input handling in ResizeWindow

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -36,3 +36,10 @@
   background-color: rgb(201, 224, 247);
   border-color: rgb(98, 162, 228);
 }
+.button:disabled {
+  opacity: 0.5;
+}
+.button.button:disabled {
+  background-color: transparent;
+  border-color: transparent;
+}
