--- a/src/css/form.css
+++ b/src/css/form.css
@@ -38,6 +38,7 @@
 .form-input-text {
   width: 60px;
   height: 22px;
+  padding: 0 4px 2px;
 
   border: 1px solid rgb(122, 122, 122);
   
@@ -54,6 +55,7 @@
 .form-input-text--small {
   width: 28px;
   height: 19px;
+  padding: 0 2px 2px;
 }
 
 .form-radio {
