- viewing canvas in full screen now works   - fixed bug causing background of primary canvas to be transparent when resizing when there was no lastPrimaryStateRef.current   - BottomBar (status bar) can now be hidden   - renamed BottomBar to StatusBar

--- a/src/components/BigButton/BigButton.module.css
+++ b/src/components/BigButton/BigButton.module.css
@@ -39,6 +39,7 @@
 }
 .button--disabled {
   opacity: 0.5;
+  filter: grayscale(100%);
 }
 .button--disabled:hover {
   background-color: transparent;
