--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -60,7 +60,7 @@
   --qa-toolbar-height: 25px;
   --inner-window-topbar-height: 30px;
   
-  --bottombar-height: 26px;
+  --statusbar-height: 26px;
   --window-shadow: rgb(30, 40, 50);
   --window-border: rgb(150, 155, 161);
 
