--- a/src/components/StatusBar/StatusBar.module.css
+++ b/src/components/StatusBar/StatusBar.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
 
   padding: 1px 0;
-  height: var(--bottombar-height);
+  height: var(--statusbar-height);
   
   background-color: var(--dark-white);
   border-top: 1px solid var(--line-medium);
