--- a/src/components/CanvasContainer/CanvasContainer.module.css
+++ b/src/components/CanvasContainer/CanvasContainer.module.css
@@ -1,28 +1,17 @@
 .container {
   position: relative;
 
-  background-color: var(--bg-canvas-bottom);
-  background-image: linear-gradient(var(--bg-canvas-top), var(--bg-canvas-bottom));
-}
-.container--has-rulers {
-  padding: var(--rulers-size) 0 0 var(--rulers-size);
-
-  background-color: rgb(241, 243, 248);
-  background-image: none;
-}
-
-.canvas-container {
   width: 100%;
   height: 100%;
   padding: var(--canvas-container-padding);
 
+  background-color: var(--bg-canvas-bottom);
+  background-image: linear-gradient(var(--bg-canvas-top), var(--bg-canvas-bottom));
+
   box-sizing: border-box;
   overflow: auto;
 }
-.container--has-rulers .canvas-container {
-  border-top: 1px solid rgb(142, 156, 175);
-  border-left: 1px solid rgb(142, 156, 175);
-  border-top-left-radius: 3px;
-  background-color: var(--bg-canvas-bottom);
-  background-image: linear-gradient(var(--bg-canvas-top), var(--bg-canvas-bottom));
+.container--has-rulers {
+  --pad: calc(var(--rulers-size) + var(--canvas-container-padding));
+  padding: var(--pad) var(--canvas-container-padding) var(--canvas-container-padding) var(--pad);
 }
