--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -61,6 +61,7 @@
   --inner-window-topbar-height: 30px;
   --rulers-size: 17px;
   --canvas-container-padding: 5px;
+  --resizer-size: 30px;
   
   --statusbar-height: 26px;
   --window-shadow: rgb(30, 40, 50);
