--- a/src/css/text.css
+++ b/src/css/text.css
@@ -38,6 +38,18 @@
     font-size: 16px;
   }
 
+  .text--6 {
+    color: rgb(75, 75, 75);
+    font-size: 11px;
+    text-align: left;
+    line-height: 1.25;
+    letter-spacing: 0;
+  }
+
+  .text--black {
+    color: rgb(0, 0, 0);
+  }
+  
   .text--centered {
     text-align: center;
   }
