--- a/src/components/Tooltip/Tooltip.module.css
+++ b/src/components/Tooltip/Tooltip.module.css
@@ -23,6 +23,7 @@
   background-color: rgb(255, 255, 255);
   border-color: rgb(100, 100, 100);
   border-radius: 0;
+  box-shadow: none;
 }
 
 .pushed {
