--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,45 +1,49 @@
-.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4px;
+@layer {
+  
+  .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+  
+    padding: 2px;
+  
+    border-radius: 0;
+    background-color: transparent;
+    border: 1px solid transparent;
+  
+    box-sizing: border-box;
+  }
+  .button--height-20 {
+    height: 20px;
+  }
+  .button:hover {
+    background-color: var(--button-hover);
+    border-color: var(--button-hover-border);
+    cursor: default;
+  }
+  .button:active {
+    background-color: var(--button-active);
+    border-color: var(--button-active-border);
+  }
+  .button.button--active {
+    background-color: rgb(201, 224, 247);
+    border-color: rgb(98, 162, 228);
+  }
+  .button.button--active:hover {
+    background-color: rgb(213, 240, 247);
+    border-color: rgb(122, 176, 231);
+  }
+  .button.button--active:active {
+    background-color: rgb(201, 224, 247);
+    border-color: rgb(98, 162, 228);
+  }
+  .button:disabled * {
+    filter: opacity(50%);
+  }
+  .button.button:disabled {
+    background-color: transparent;
+    border-color: transparent;
+  }
 
-  padding: 2px;
-
-  border-radius: 0;
-  background-color: transparent;
-  border: 1px solid transparent;
-
-  box-sizing: border-box;
-}
-.button--height-20 {
-  height: 20px;
-}
-.button:hover {
-  background-color: var(--button-hover);
-  border-color: var(--button-hover-border);
-  cursor: default;
-}
-.button:active {
-  background-color: var(--button-active);
-  border-color: var(--button-active-border);
-}
-.button.button--active {
-  background-color: rgb(201, 224, 247);
-  border-color: rgb(98, 162, 228);
-}
-.button.button--active:hover {
-  background-color: rgb(213, 240, 247);
-  border-color: rgb(122, 176, 231);
-}
-.button.button--active:active {
-  background-color: rgb(201, 224, 247);
-  border-color: rgb(98, 162, 228);
-}
-.button:disabled {
-  opacity: 0.5;
-}
-.button.button:disabled {
-  background-color: transparent;
-  border-color: transparent;
 }
