--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,91 +1,95 @@
-.form-button {
-  width: 85px;
-  height: 23px;
-  padding: 0 0 1px;
+@layer {
 
-  background-color: rgb(225, 225, 225);
-  border: 1px solid rgb(173, 173, 173);
-  font-size: 12px;
-  font-family: 'segoe';
-
-  box-sizing: border-box;
-}
-.form-button--active {
-  border: 2px solid rgb(0, 120, 215);
-}
-.form-button--medium {
-  width: 63px;
-}
-.form-button--full-width {
-  width: 100%
-}
-.form-button:disabled {
-  background-color: rgb(204, 204, 204);
-  border-color: rgb(193, 193, 193);
-  color: rgb(144, 144, 168);
-}
-.form-button:hover:not(:disabled) {
-  background-color: rgb(229, 241, 251);
-  border: 1px solid rgb(0, 120, 215);
-}
-.form-button:active:not(:disabled) {
-  background-color: rgb(204, 228, 247);
-}
-.form-button__icon {
-  margin-left: 4px;
-}
-
-.form-input-text {
-  width: 60px;
-  height: 22px;
-  padding: 0 4px 2px;
-
-  border: 1px solid rgb(122, 122, 122);
+  .form-button {
+    width: 85px;
+    height: 23px;
+    padding: 0 0 1px;
   
-  box-sizing: border-box;
-  transition: border-color 300ms;
-}
-.form-input-text:hover {
-  border-color: rgb(23, 23, 23);
-}
-.form-input-text:focus {
-  border-color: rgb(0, 120, 215);
-  outline: none;
-}
-.form-input-text--small {
-  width: 28px;
-  height: 19px;
-  padding: 0 2px 2px;
-}
-
-.form-radio {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    background-color: rgb(225, 225, 225);
+    border: 1px solid rgb(173, 173, 173);
+    font-size: 12px;
+    font-family: 'segoe';
   
-  width: 12px;
-  height: 12px;
-  margin: 0 3px 0 0;
-
-  color: rgb(51, 51, 51);
-  border: 1px solid currentColor;
-  background-color: rgb(255, 255, 255);
-  border-radius: 50%;
-
-  transition: color 300ms;
-  box-sizing: border-box;
-  appearance: none;
-}
-.form-radio:checked::after {
-  content: '';
-
-  display: block;
-  width: 6px;
-  height: 6px;
-
-  background-color: currentColor;
-  border-radius: 50%;
-}
-.form-radio:hover {
-  color: rgb(0, 120, 215);
+    box-sizing: border-box;
+  }
+  .form-button--active {
+    border: 2px solid rgb(0, 120, 215);
+  }
+  .form-button--medium {
+    width: 63px;
+  }
+  .form-button--full-width {
+    width: 100%
+  }
+  .form-button:disabled {
+    background-color: rgb(204, 204, 204);
+    border-color: rgb(193, 193, 193);
+    color: rgb(144, 144, 168);
+  }
+  .form-button:hover:not(:disabled) {
+    background-color: rgb(229, 241, 251);
+    border: 1px solid rgb(0, 120, 215);
+  }
+  .form-button:active:not(:disabled) {
+    background-color: rgb(204, 228, 247);
+  }
+  .form-button__icon {
+    margin-left: 4px;
+  }
+  
+  .form-input-text {
+    width: 60px;
+    height: 22px;
+    padding: 0 4px 2px;
+  
+    border: 1px solid rgb(122, 122, 122);
+    
+    box-sizing: border-box;
+    transition: border-color 300ms;
+  }
+  .form-input-text:hover {
+    border-color: rgb(23, 23, 23);
+  }
+  .form-input-text:focus {
+    border-color: rgb(0, 120, 215);
+    outline: none;
+  }
+  .form-input-text--small {
+    width: 28px;
+    height: 19px;
+    padding: 0 2px 2px;
+  }
+  
+  .form-radio {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    width: 12px;
+    height: 12px;
+    margin: 0 3px 0 0;
+  
+    color: rgb(51, 51, 51);
+    border: 1px solid currentColor;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+  
+    transition: color 300ms;
+    box-sizing: border-box;
+    appearance: none;
+  }
+  .form-radio:checked::after {
+    content: '';
+  
+    display: block;
+    width: 6px;
+    height: 6px;
+  
+    background-color: currentColor;
+    border-radius: 50%;
+  }
+  .form-radio:hover {
+    color: rgb(0, 120, 215);
+  }
+  
 }
