--- a/src/components/FileDropdownMore/FileDropdownMore.module.css
+++ b/src/components/FileDropdownMore/FileDropdownMore.module.css
@@ -32,6 +32,13 @@
   background-color: rgb(233, 240, 248);
   border-color: rgb(165, 207, 249);
 }
+.button:disabled * {
+  filter: opacity(0.5);
+}
+.button:disabled:hover {
+  background-color: transparent;
+  border-color: transparent;
+}
 
 .dropdown {
   position: absolute;
